Alexaスキル作成（途中まで） (#204)
* add alexa-skill

* remove

* add alexa skill]

* add multi slots

* add TypeScript

* rename shareWeb to web

* add login with amzon

* add login with amzon

* add login with amazon API

* add: login with amazon

* update: alexa-skill

* update api and web

* update: skil.json

* add: alexa skill setting
