# tools/swagger/swagger.yaml
@@ -39,7 +39,33 @@ paths:
       responses:
         '200':
           description: |
-            - 同期成功
+            - 同期成功した
+
+  /LognWithAmazon:
+    post:
+      tags:
+        - 実装済み
+      requestBody:
+        $ref: '#/components/requestBodies/AmazonWithLoginRequest'
+      description: |
+        - amazonアカウントとの連携情報を登録する
+      responses:
+        '200':
+          description: |
+            - 連携に成功した
+
+  /amazon/RegisterItem:
+    post:
+      tags:
+        - 未実装
+      requestBody:
+        $ref: '#/components/requestBodies/AlexaRegisterItemRequest'
+      description: |
+        - Alexa経由で予定を登録する
+      responses:
+        '200':
+          description: |
+            - 連携に成功した
 
 components:
   securitySchemes:
@@ -68,6 +94,34 @@ components:
                   type: array
                   items:
                     $ref: '#/components/schemas/Calendar'
+    AmazonWithLoginRequest:
+        description: amazonアカウントに連携する
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                accessToken:
+                  type: string
+                  format: string
+                  pattern: "qawaqwsedrftgyhujiko"
+                  example: ""
+                  description: アクセスToken
+    AlexaRegisterItemRequest:
+        description: Alexa経由で予定を登録Request
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                item:
+                  $ref: '#/components/schemas/AlexaItem'
+
+                itemDetails:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/AlexaItemDetail'
+
   schemas:
     Item:
       type: object
@@ -166,3 +220,26 @@ components:
           pattern: string
           example: "2018-01-01T00:00:00Z"
           description: 日付
+    AlexaItem:
+      type: object
+      description: Alexa経由の予定
+      properties:
+        title:
+          type: string
+          pattern: string
+          example: 葛西臨海公園
+          description: タイトル
+        date:
+          type: string
+          pattern: string
+          example: "2018-01-01T00:00:00Z"
+          description: 日付
+    AlexaItemDetail:
+      type: object
+      description: Alexa経由の予定詳細
+      properties:
+        title:
+          type: string
+          pattern: string
+          example: 葛西臨海公園
+          description: タイトル
